Solved problem 841 from leetcode "Keys and Rooms"
Так как я понятия не имел как решать задачи из топика графы, взял сразу ответ из решения. До решения была мысль просто оббегать комнаты, возможно использовав рекурсию. По идее решение примерно такое же, просто я думал графы решаются как-то по особенному

https://leetcode.com/problems/keys-and-rooms/description/?envType=study-plan-v2&envId=leetcode-75